# Pedestrian-Detection-Project

./: .cproject  .gitignore  .project  README.md  build_all.sh  build_core.sh  common_settings.cmake  generate_protocol_buffer_files.sh  license.text  readme.text
libs/CImg/: CHANGES.txt  CImg.h
libs/cudatemplates/: CMakeLists.txt  CPackConfig.cmake  CPackSourceConfig.cmake  DartConfiguration.tcl  Doxyfile.in  cudatemplates.spec
libs/liblinear-1.8/: CMakeLists.txt  linear.cpp  train.c
src/applications/: AbstractApplication.cpp  AbstractApplication.hpp  AbstractGui.cpp  AbstractGui.hpp  BaseApplication.cpp  BaseApplication.hpp  BaseSdlGui.cpp  BaseSdlGui.hpp  EmptyGui.cpp  EmptyGui.hpp
src/applications/boosted_learning/: BoostedLearningApplication.cpp  BoostedLearningApplication.hpp  CMakeLists.txt  boosted_learning.condor.job.txt  boosted_learning.config.ini  boosted_learning.cpp  boosted_learning_chnftrs_inria_multiscale_octave_-1.config.ini  boosted_learning_chnftrs_inria_multiscale_octave_0.config.ini  boosted_learning_chnftrs_inria_multiscale_octave_1.config.ini  boosted_learning_chnftrs_inria_multiscale_octave_2.config.ini  boosted_learning_chnftrs_inria_multiscale_octave_3.config.ini  boosted_learning_chnftrs_paper_inria_setup.config.ini  eccvw2014_squareschnftrs_caltech_training.config.ini  eccvw2014_squareschnftrs_inria_training.config.ini  eccvw2014_squareschnftrs_kitti_training.config.ini  inria_baseline_training_config.ini  inria_speedy_training_config.ini  integral_channels_helpers.cpp  integral_channels_helpers.hpp  run_speedy_training.sh
src/applications/bootstrapping_lib/: CMakeLists.txt  IntegralChannelsComputer.cpp  IntegralChannelsComputer.hpp  bootstrapping_lib.cpp  bootstrapping_lib.hpp  test_bootstrapping_lib.cpp
src/applications/compute_feature_channels/: CMakeLists.txt  ComputeFeatureChannelsApplication.cpp  ComputeFeatureChannelsApplication.hpp  compute_config.ini  compute_feature_channels.cpp
src/applications/ground_estimation/: CMakeLists.txt  GroundEstimationApplication.cpp  GroundEstimationApplication.hpp  GroundEstimationGui.cpp  GroundEstimationGui.hpp  ground_estimation.cpp  test.config.ini
src/applications/objects_detection/: CMakeLists.txt  ObjectsDetectionApplication.cpp  ObjectsDetectionApplication.hpp  ObjectsDetectionGui.cpp  ObjectsDetectionGui.hpp  cvpr2012_chnftrs_over_bahnhof.config.ini  cvpr2012_inria_pedestrians.config.ini  cvpr2012_very_fast_over_bahnhof.config.ini  eccv2014_face_detection_pascal.config.ini  eccvw2014_squares_chnftrs_over_caltech.config.ini  eccvw2014_squares_chnftrs_over_inria.config.ini  eccvw2014_squares_chnftrs_over_kitti.config.ini  objects_detection.cpp
src/applications/objects_detection_lib/: CMakeLists.txt  FakeObjectsDetectionLibGui.cpp  FakeObjectsDetectionLibGui.hpp  ObjectsDetectionLibGui.cpp  ObjectsDetectionLibGui.hpp  TestObjectsDetectionApplication.cpp  TestObjectsDetectionApplication.hpp  objects_detection_lib.cpp  objects_detection_lib.hpp  test_monocular_objects_detection_lib.config.ini  test_objects_detection_lib.config.ini  test_objects_detection_lib.cpp
src/applications/stixel_world/: CMakeLists.txt  StixelWorldApplication.cpp  StixelWorldApplication.hpp  StixelWorldGui.cpp  StixelWorldGui.hpp  fast.config.ini  fast_uv.config.ini  stixel_world.cpp
src/applications/stixel_world_lib/: CMakeLists.txt  StixelWorldLibGui.cpp  StixelWorldLibGui.hpp  TestStixelWorldApplication.cpp  TestStixelWorldApplication.hpp  stixel_world_lib.cpp  stixel_world_lib.hpp  test_stixel_world_lib.config.ini  test_stixel_world_lib.cpp
src/applications/video_input/: CMakeLists.txt  VideoInputApplication.cpp  VideoInputApplication.hpp  VideoInputGui.cpp  VideoInputGui.hpp  test.config.ini  video_input.cpp
src/boosted_learning/: AdaboostLearner.cpp  AdaboostLearner.hpp  DecisionStump.cpp  DecisionStump.hpp  DecisionTreeNode.cpp  DecisionTreeNode.hpp  Feature.cpp  Feature.hpp  ImageData.cpp  ImageData.hpp  LabeledData.cpp  LabeledData.hpp  ModelIO.cpp  ModelIO.hpp  StrongClassifier.cpp  StrongClassifier.hpp  TrainingData.cpp  TrainingData.hpp  WeakClassifier.cpp  WeakClassifier.hpp  WeakClassifierDecisionTree.cpp  WeakClassifierDecisionTree.hpp  WeakClassifierStumpSet.cpp  WeakClassifierStumpSet.hpp  WeakLearner.cpp  WeakLearner.hpp
src/helpers/: AlignedImage.cpp  AlignedImage.hpp  IStereoImagesIterator.hpp  LeftRightDirectoriesIterator.cpp  LeftRightDirectoriesIterator.hpp  Log.cpp  Log.hpp  ModuleLog.cpp  ModuleLog.hpp  SplitImagesDirectoryIterator.cpp  SplitImagesDirectoryIterator.hpp  add_to_parsed_options.cpp  add_to_parsed_options.hpp  any_to_string.cpp  any_to_string.hpp  fill_multi_array.hpp  for_each.hpp  for_each_multi_array.cpp  for_each_multi_array.hpp  geometry.cpp  geometry.hpp  get_option_value.hpp  memory_available.cpp  memory_available.hpp  progress_display_with_eta.cpp  progress_display_with_eta.hpp  pseudo_inverse.hpp  read_rectification_homographies.cpp  read_rectification_homographies.hpp  replace_environment_variables.cpp  replace_environment_variables.hpp  rgb8_cimg_t.hpp  xyz_indices.hpp  (+7 more)
src/tests/data_sequence/: CMakeLists.txt  TestData.pb.cc  TestData.pb.h  TestData.proto  test_data_sequence.cpp
src/tests/lines_detection/: CMakeLists.txt  test_lines_detection.cpp
src/tests/objects_detection/: CMakeLists.txt  DetectorsComparisonTestApplication.cpp  DetectorsComparisonTestApplication.hpp  IntegralChannelsComparisonTestApplication.cpp  IntegralChannelsComparisonTestApplication.hpp  VeryFastDetectorScaleStatisticsApplication.cpp  VeryFastDetectorScaleStatisticsApplication.hpp  channels_test_model.proto.txt  compute_soft_cascade.config.ini  fpdw_vs_chnftrs.config.ini  gpu_vs_cpu_integral_channels.config.ini  plot_cascades_thresholds.py  plot_channel_statistics.py  plot_very_fast_detector_scales_statistics.py  test_objects_detection.cpp  very_fast_detector_scale_statistics.config.ini
src/tests/stixels_estimation/: CMakeLists.txt  test_stixels_estimator.cpp
tools/: .project
tools/objects_detection/opencv_gpu_resize/: CMakeLists.txt  opencv_gpu_resize.cpp  test_gpu_resize.py
(+534 files in other folders)
